# PROBABLES-public

./: .gitignore  app.py  main.py  probable_pitchers.json  pyproject.toml  requirements.txt  roster.csv
app/: app.py
data/input/: projected-standings.html  roster.csv
data/processed/: 2026 Fantasy Baseball Draft - Closers.csv  2026 Fantasy Baseball Draft - Hitters.csv  2026 Fantasy Baseball Draft - Starting Pitchers.csv  FantasyPros_Fantasy_Baseball_Park_Factors.csv  probable_pitchers.json  probable_pitchers_merged.csv  roster_proj.csv  standings.csv
scripts/: test.py  wget_team_runs.py
src/: main.py
