[project]
name = "probables"
version = "0.1.0"
description = "Fetch probable pitchers for the next 7 days"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "pathlib>=1.0.1",
    "datetime>=5.5",
    "typing>=3.10.0.0",
    "streamlit>=1.50.0",
    "pandas>=2.3.3",
    "numpy>=2.0.2",
    "lxml>=6.0.2",
    "html5lib>=1.1",
    "beautifulsoup4>=4.14.3",
]
